# erp-agent

./: .gitignore  docker-compose.yml
backend/: .pre-commit-config.yaml  pyproject.toml
backend/erp-agent/: pyproject.toml
backend/erp-agent/app/: chainlit_app.py
backend/erp-agent/app/agent/: __init__.py  graph.py  llm.py  nodes.py  prompts.py  routing.py  schemas.py  state.py
backend/erp-agent/app/core/: config.py  langfuse.py
backend/erp-agent/app/gateway/: feishu_client.py  server.py
backend/erp-agent/app/mcp/: client.py  erp_client.py  interceptor.py  pruning.py  server.py  tools.py
backend/erp-agent/docs/: 02-Agent-Business-Behavior.md  03-Agent-Technical-Arch.md  04-Implementation-Plan.md  PRD.md
backend/erp-agent/scripts/: simulate_s3_hitl.py  test_feishu_send.py  verify_5_scenarios.py  verify_mcp_integration.py  verify_pruning.py  verify_tools.py
backend/erp-agent/tests/: conftest.py
backend/erp-agent/tests/fixtures/: __init__.py  mock_llm.py  mock_tools.py
backend/erp-agent/tests/test_agent/: test_e2e.py  test_hitl.py  test_scenario_s1.py  test_scenario_s2.py  test_scenario_s3.py  test_scenario_s4.py  test_scenario_s5.py  test_scenarios.py
backend/erp-agent/tests/test_mcp/: test_integration.py  test_pruning.py
backend/mock-erp/: pyproject.toml
backend/mock-erp/app/: main.py
backend/mock-erp/app/api/: deps.py
backend/mock-erp/app/api/v1/: admin.py  budget.py  department.py  inventory.py  pricing.py  product.py  purchase_order.py  router.py  supplier.py
backend/mock-erp/app/core/: config.py  database.py  exceptions.py
backend/mock-erp/app/dashboard/: auth.py  views.py
backend/mock-erp/app/model/: __init__.py  admin.py  base.py  budget.py  department.py  inventory.py  product.py  purchase_order.py  supplier.py  supplier_pricelist.py
backend/mock-erp/app/repository/: budget.py  department.py  inventory.py  product.py  purchase_order.py  supplier.py  supplier_pricelist.py
backend/mock-erp/app/schema/: budget.py  department.py  inventory.py  pricing.py  purchase_order.py  supplier.py
backend/mock-erp/app/service/: pricing.py  purchase_order.py
backend/mock-erp/docs/: Business_And_API.md  DB_Design.md  PRD.md  Structure_And_Rodemap.md  draft.md
backend/mock-erp/scripts/: seed_db.py  verify_models.py
backend/mock-erp/tests/: conftest.py  test_api_admin.py  test_api_pricelist.py  test_api_pricing.py  test_api_product.py  test_api_purchase_order.py  test_rbac.py  test_repository_supplier_pricelist.py  test_service_pricing.py  test_service_purchase_order.py
docs/: draft.md
