[project]
name = "backend"
version = "0.1.0"
description = "erp-agent的后端"
requires-python = ">=3.13"
dependencies = [
    "erp-agent",
    "mock-erp",
]

[tool.uv]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
[dependency-groups]
dev = [
  "ruff>=0.15.15",
  "basedpyright>=1.27.0",
  "pre-commit>=4.6.0",
  "pytest>=9.0.3",
  "httpx>=0.28.1",
  "pytest-httpx>=0.36.2",
]

[tool.uv.workspace]
members = ["mock-erp", "erp-agent"]

[tool.uv.sources]
mock-erp = { workspace = true, editable = true }
erp-agent = { workspace = true, editable = true }

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportPrivateUsage = false
exclude = ["**/.venv", "**/node_modules", "**/__pycache__"]
reportAssignmentType = "none"
