[project]
name = "erp-agent"
version = "0.1.0"
description = "LLM Agent orchestration layer for Mock ERP"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langfuse>=4.7.1",
    "langgraph>=1.2.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
