[project]
name = "erp-agent"
version = "0.1.0"
description = "LLM Agent orchestration layer for Mock ERP"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langfuse>=4.7.1",
    "fastmcp>=3.3.1",
    "psycopg-binary>=3.3.4",
    "fastapi[standard]>=0.136.3",
    "chainlit>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
